--- a/Pandora_v1.1/pom.xml
+++ b/Pandora_v1.1/pom.xml
@@ -107,24 +107,6 @@
             <scope>compile</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-core</artifactId>
-            <version>3.1.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-mapping</artifactId>
-            <version>3.1.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-extras</artifactId>
-            <version>3.1.4</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.codeborne/phantomjsdriver -->
         <dependency>
             <groupId>com.codeborne</groupId>
@@ -163,25 +145,25 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.22.0</version>
-                        <configuration>
-                            <parallel>methods</parallel>
-                            <threadCount>${threads}</threadCount>
-                            <systemPropertyVariables>
-                                <browser>${browser}</browser>
-                                <headless>${headless}</headless>
-                                <remoteDriver>${remote}</remoteDriver>
-                                <gridURL>${seleniumGridURL}</gridURL>
-                                <desiredPlatform>${platform}</desiredPlatform>
-                                <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
-                                <screenshotDirectory>${screenshotDirectory}</screenshotDirectory>
-                                <!--Set properties passed in by the driver binary downloader-->
-                                <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
-                                <webdriver.ie.driver>${webdriver.ie.driver}</webdriver.ie.driver>
-                                <webdriver.opera.driver>${webdriver.opera.driver}</webdriver.opera.driver>
-                                <webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>
-                                <webdriver.edge.driver>${webdriver.edge.driver}</webdriver.edge.driver>
-                            </systemPropertyVariables>
-                        </configuration>
+<!--                        <configuration>-->
+<!--                            <parallel>methods</parallel>-->
+<!--                            <threadCount>${threads}</threadCount>-->
+<!--                            <systemPropertyVariables>-->
+<!--                                <browser>${browser}</browser>-->
+<!--                                <headless>${headless}</headless>-->
+<!--                                <remoteDriver>${remote}</remoteDriver>-->
+<!--                                <gridURL>${seleniumGridURL}</gridURL>-->
+<!--                                <desiredPlatform>${platform}</desiredPlatform>-->
+<!--                                <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>-->
+<!--                                <screenshotDirectory>${screenshotDirectory}</screenshotDirectory>-->
+<!--                                &lt;!&ndash;Set properties passed in by the driver binary downloader&ndash;&gt;-->
+<!--                                <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>-->
+<!--                                <webdriver.ie.driver>${webdriver.ie.driver}</webdriver.ie.driver>-->
+<!--                                <webdriver.opera.driver>${webdriver.opera.driver}</webdriver.opera.driver>-->
+<!--                                <webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>-->
+<!--                                <webdriver.edge.driver>${webdriver.edge.driver}</webdriver.edge.driver>-->
+<!--                            </systemPropertyVariables>-->
+<!--                        </configuration>-->
                         <executions>
                             <execution>
                                 <goals>
@@ -195,6 +177,4 @@
             </build>
         </profile>
     </profiles>
-
-
 </project>
